# FC3D

./: .clang-format  .gitignore  CMakeLists.txt  FC3D.js  FC3D.wasm  Makefile  README.md  index.html
assets/: main.lua
assets/shaders/glsl100/: barycentric.fs  barycentric.vs  bloom.fs
assets/shaders/glsl330/: barycentric.fs  barycentric.vs  bloom.fs
src/: lines_parser.h  main.c
